force-app/main/default/objects/Boat__c/fields/BoatsTy__c.field-meta.xml
<CustomField>
    <fullName>BoatsTy__c</fullName>
    <label>BoatsTy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trawler</fullName>
            </value>
            <value>
                <fullName>Crab Boat</fullName>
            </value>
            <value>
                <fullName>Tuna Boat</fullName>
            </value>
            <value>
                <fullName>Mega Yacht</fullName>
            </value>
            <value>
                <fullName>Sports Yacht</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>