force-app/main/default/objects/Boat__c/recordTypes/Fishing_Boat.recordType-meta.xml
<RecordType>
    <fullName>Fishing_Boat</fullName>
    <active>true</active>
    <label>Fishing Boat</label>
</RecordType>