force-app/main/default/objects/Boat__c/recordTypes/Luxury_Yacht.recordType-meta.xml
<RecordType>
    <fullName>Luxury_Yacht</fullName>
    <active>true</active>
    <label>Luxury Yacht</label>
</RecordType>